# alo-reader

./: .env.example  .gitignore  DESIGN.md  MILESTONES.md  Makefile  README.md
api/: alembic.ini  pyproject.toml
api/app/: config.py  db.py  deps.py  errors.py  httpmetrics.py  log.py  main.py  metrics.py  models.py  opml.py  security.py  telemetry.py
api/app/auth/: __init__.py  clerk.py  middleware.py  none.py  pat.py  provider.py  ratelimit.py  routes.py  runtime.py
api/app/ingest/: __init__.py  parse.py  raw.py  sanitize.py
api/app/routes/: counts.py  discover.py  entries.py  folders.py  icons.py  metrics.py  opml.py  streams.py  subscriptions.py
api/app/store/: __init__.py  counts.py  entries.py  entry_states.py  feeds.py  folders.py  icons.py  metrics.py  stream.py  subscriptions.py  users.py
api/app/worker/: fetch.py  http.py  icons.py  log.py  main.py  maintenance.py  pipeline.py  schedule.py  ssrf.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial.py  0002_search_coverage.py  0003_rum_search_index.py  0004_entry_content_truncated.py  0005_orphan_tracking.py  0006_metric_counters.py  0007_recency_indexes.py  0008_entry_summary.py  0009_drop_metric_counters.py  0010_feed_trace_ctx.py
api/tests/: apihelpers.py  conftest.py  factories.py  test_abuse.py  test_auth_boot.py  test_auth_clerk.py  test_auth_none.py  test_auth_pat.py  test_claim.py  test_content_cap.py  test_counts.py  test_counts_api.py  test_discover_api.py  test_entries_state_api.py  test_errors.py  test_fetch.py  test_folders_api.py  test_healthz.py  test_icons_api.py  test_ingest_golden.py  test_ingest_raw.py  test_maintenance.py  test_metrics_api.py  test_opml_api.py  test_quota.py  test_quota_concurrency.py  test_ratelimit.py  test_sanitize.py  test_search_api.py  test_security_headers.py  test_ssrf.py  test_state_clamp.py  test_store_crud.py  test_streams.py  test_streams_api.py  test_subscriptions.py  test_subscriptions_api.py  test_telemetry.py  test_webhook_clerk.py  test_worker_claim.py  (+5 more)
api/tests/fixtures/feeds/: atom10.xml  cdata.xml  empty_feed.xml  enormous_entry.xml  future_dates.xml  html_in_titles.xml  missing_guids.xml  relative_urls.xml  rss091.xml  rss10.xml  rss20.xml  wrong_encoding.xml  xss_data.xml  xss_javascript.xml  xss_onerror.xml  xss_script.xml  xss_svg.xml
api/tests/fixtures/golden/: atom10.json  cdata.json  empty_feed.json  enormous_entry.json  future_dates.json  html_in_titles.json  missing_guids.json  relative_urls.json  rss091.json  rss10.json  rss20.json  xss_data.json  (+5 more)
(+141 files in other folders)
