[project]
name = "alo-reader-api"
version = "0.0.0"
description = "alo-reader API (FastAPI) and worker"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "feedparser>=6.0",
    "nh3>=0.2.17",
    "zstandard>=0.22",
    "pyjwt[crypto]>=2.8",
    "svix>=1.20",
]

[project.optional-dependencies]
# Dev tooling is pinned exactly: with no Python lockfile, `>=` let CI float to
# the latest release, and a mypy/ruff bump could add rules that fail CI on
# unchanged code (mypy 2.2 did exactly that). Bump these deliberately.
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "testcontainers[postgres]==4.14.2",
    "ruff==0.15.20",
    "mypy==2.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
